# stock-research-ai

./: .gitignore  README.md  app.py  pyproject.toml  run_app.py  setup.py
src/stock_research/: __init__.py
src/stock_research/ai/: __init__.py
src/stock_research/ai/agents/: base.py
src/stock_research/ai/knowledge/: fundamental.txt  sentiment.txt  technical.txt
src/stock_research/config/: __init__.py  settings.py
src/stock_research/ui/: __init__.py  app.py
src/stock_research/ui/components/: __init__.py  fundamental.py  sentiment.py  technical.py
