[project]
name = "stock_research"
version = "0.1.0"
description = "Stock market research application using phidata agents and Streamlit"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "phidata>=1.0.0",
    "streamlit>=1.10.0",
    "yfinance>=0.1.70",
    "pandas>=1.3.0",
    "python-dotenv>=0.19.0",
    "pydantic>=2.0.0",
    "plotly>=5.0.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "isort>=5.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_optional = true

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "B", "I", "UP"]