[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stock_research"
version = "0.1.0"
authors = [
  { name="Your Name", email="your.email@example.com" },
]
description = "Stock market research application using phidata agents and Streamlit"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "phidata>=1.0.0",
    "streamlit>=1.10.0",
    "yfinance>=0.1.70",
    "pandas>=1.3.0",
    "python-dotenv>=0.19.0",
    "pydantic>=2.0.0",
    "plotly>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "isort>=5.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["stock_research"]